change Modules Group

--- a/light_slide_gallery.info.yml
+++ b/light_slide_gallery.info.yml
@@ -2,4 +2,4 @@ name: 'Lightslider & LightGallery Image Format'
 type: module
 description: 'Lightslider & LightGallery Image Format'
 core: 8.x
-package: 'image'
+package: 'Light Gallery'
