Add media entity Formatter

--- a/light_slide_gallery.info.yml
+++ b/light_slide_gallery.info.yml
@@ -1,5 +1,5 @@
 name: 'Lightslider & LightGallery Image Format'
 type: module
 description: 'Lightslider & LightGallery Image Format'
-core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Light Gallery'
